Abandon List.of usage in test